@@ -1,5 +1,7 @@
 Changes with version
 
+ *) Ensure the extension is versioned as expected
+
  *) Increase compiler happiness
 
  *) Add x86_64, i686 and aarch64 wheels
